Closed Bug 719231 Opened 12 years ago Closed 12 years ago

IonMonkey: Miscompilation of unconditional for loops

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sstangl, Assigned: sstangl)

Details

Attachments

(1 file)

IonBuilder::assertValidLoopHeadOp() trips an invalid assertion in the presence of an unconditional |for| loop. The assertion is only valid if a condition exists.
Attached patch Patch.Splinter Review
Attachment #589645 - Flags: review?(dvander)
Attachment #589645 - Flags: review?(dvander) → review+
hg.mozilla.org/projects/ionmonkey/rev/d15cfea96e89
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.