Fix invalid assertion to support unconditional for loops. (Bug 719231, r=dvander)